--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "events-sample",
+  "name": "node-project",
   "version": "0.0.1",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "description": "",
   "main": "server.js",
-  "repository": "",
   "author": "Kenya-West",
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
     "socket.io": "~0.9.14"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC"
 }
